fix font size on mobile

--- a/cv/responsive.less
+++ b/cv/responsive.less
@@ -101,7 +101,7 @@ h5 {
     float: left;
   }
   .header.left {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     width: 39%;
     padding: 8mm 5mm 5mm 5mm;
     @media screen and (min-width: 800px) {
